# Pigeon-Planner

./: .eslintrc.json  .gitignore  AUTHORS  CHANGES-CLASSIC.md  CHANGES.md  CLAUDE.md  CLAUDE.md.backup.20251130_003919  LICENSE  MANIFEST.in  Makefile  PKG-INFO  QUICK_START.md  README.dev  README.md  RELEASE_NOTES.md  USER_GUIDE.md  index.html  package-lock.json  package.json  pigeonplanner.py  tsconfig.json
glade/: AddressBook.ui  DataManager.ui  ExportWindow.ui  LocationChooser.ui  MainWindow.ui  MediaView.ui  MedicationView.ui  ResultWindow.ui  ResultsView.ui  VelocityCalculator.ui  pigeonplannerwidgets.py  run_glade.sh
mac/: Info.plist.in  build_package.py  pigeonplanner.bundle  pigeonplanner.modules
pigeon-planner-rs/: CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
pigeon-planner-rs/src-tauri/: Cargo.toml  pigeon_planner.db  pigeon_planner.db-shm  pigeon_planner.db-wal  pigeon_planner.db.backup  tauri.conf.json
pigeon-planner-rs/src-tauri/icons/: icon.icns
pigeon-planner-rs/src-tauri/migrations/: 001_initial_schema.sql  002_pedigree_optimization.sql  003_breeding_management.sql
pigeon-planner-rs/src-tauri/src/: error.rs  main.rs
pigeon-planner-rs/src-tauri/src/commands/: mod.rs
pigeon-planner-rs/src-tauri/src/database/: connection.rs
pigeon-planner-rs/src-tauri/src/models/: breeding.rs  health.rs  mod.rs  pigeon.rs
pigeon-planner-rs/src-tauri/src/services/: breeding_service.rs  mod.rs  pedigree_service.rs
pigeon-planner-rs/src-tauri/src/utils/: mod.rs
pigeonplanner-web/: README.md
(+230 files in other folders)
