[package]
name = "pigeon-planner-rs"
version = "1.0.0"
description = "Pigeon Planner - Modern pigeon management application"
authors = ["Pigeon Planner Team"]
license = "GPL-3.0"
repository = "https://github.com/pigeonplanner/pigeon-planner-rs"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-open", "dialog-save", "fs-copy-file", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-dir", "fs-remove-file", "fs-rename-file", "fs-write-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File handling
csv = "1.3"
image = "0.24"
walkdir = "2.4"

# Internationalization
fluent = "0.16"
unic-langid = "0.9"

# Import/Export
calamine = "0.22"

[[bin]]
name = "pigeon-planner-rs"
path = "src/main.rs"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
